k8s-node+mongo/loginapp_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-app
  labels:
    app: joker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joker
  template:
    metadata:
      labels:
        app: joker
    spec:
      containers:
      - name: nodeapp
        image: k8sregistry0090.azurecr.io/loginapp:1.0.0
        ports:
          - containerPort: 7500
        resources:
          limits:
            cpu: "1"
            memory: "5Gi"
          requests:
            cpu: "500m"
            memory: "500Mi"
