k8s-node+mongo/svc_loginapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-app
spec:
  selector:
    app: joker
  ports:
    - port: 80
      targetPort: 7500
  type: ClusterIP
