k8s-node+mongo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: test
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - manoharnunna.co.in
      secretName: login-tls-secret
  rules:
    - host: manoharnunna.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: login-app
                port:
                  number: 80
